--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,6 @@
 This is Git-Azure test
 </head>
 <h2>
-	First Page Section
-
+	First Page Sectio
 </h2>
-<p>The page is deployed in Azure !!!!!!!</p>
 </html>
