--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,8 @@
 This is Git-Azure test
 </head>
 <h2>
-	First Page Sectio
+	First Page Section
 </h2>
+
+<p> This is Git Azure Test !!!!!!</p>
 </html>
